Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,7 @@
     <title>Pig Latin Input</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
+    <h1>Pig Latinizer!</h1>
     <form method="POST" action="/output">
         <p><label for="user_phrase">Enter your phrase: </label></p>
         <p><input type="text" name="user_phrase" id="user_phrase"></p>
