--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -2,14 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Pig Latin Input</title>
+    <title>title</title>
   </head>
   <body>
+    <h1>Pig Latinizer</h1>
     <h1>Pig Latinizer!</h1>
-    <form method="POST" action="/output">
-        <p><label for="user_phrase">Enter your phrase: </label></p>
-        <p><input type="text" name="user_phrase" id="user_phrase"></p>
-        <input type="submit" name="Submit" id="submit">
-      </form>
+    <form method="POST" action="/piglatinize">
+      <label for="user_phrase">Enter your phrase:</label>
+      <input type="text" name="user_phrase"/>
+      <input type="submit">
+    </form>
+
   </body>
-</html>
+</html> 
