--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,8 +5,8 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-    <h1>Pig Latinizer!</h1>
+    
+    <h1>Pig Latinizer! You're a pigg</h1>
     <form method="POST" action="/piglatinize">
       <label for="user_phrase">Enter your phrase:</label>
       <input type="text" name="user_phrase"/>
